--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ ash = { version = "0.37.1", features = ["linked"] }
 ash-window = "0.12.0"
 glfw = "0.51.0"
 gpu-allocator = "0.20.0"
+
+[features]
+default = []
+conservative_rasterization = []
+thread_safety = []
