--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [features]
 default = ["gpu_id_validation"]
-conservative_rasterization = []
 gpu_id_validation = []
+conservative_rasterization = []
 
 [dependencies]
 daxa_derive = { path = "./src/daxa_derive" }
@@ -17,5 +17,8 @@ anyhow = "1.0.66"
 ash = { version = "0.37.1", features = ["linked"] }
 ash-window = "0.12.0"
 bitfield = "0.14.0"
-glfw = "0.51.0"
 gpu-allocator = "0.20.0"
+raw-window-handle = "0.5.0"
+
+[dev-dependencies]
+glfw = "0.51.0"
