--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["gpu_id_validation"]
+default = [
+    "gpu_id_validation", 
+    "pipeline_manager", 
+    "conservative_rasterization"
+]
 gpu_id_validation = []
+pipeline_manager = []
 conservative_rasterization = []
 
 [dependencies]
