--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,10 @@
+[workspace]
+members = [
+    "tests/6_pipeline_manager/shaders",
+    "examples/0_rectangle_cutting/shaders"
+]
+
+
 [package]
 name = "daxa-rs"
 version = "0.1.0"
@@ -25,17 +32,16 @@ ash-window = "0.12.0"
 bitfield = "0.14.0"
 gpu-allocator = "0.22.0"
 raw-window-handle = "0.5.0"
-spirv-builder = { version = "0.4.0", features = ["watch"] }
-spirv-std = { version = "0.4.0", features = ["glam"] }
-
+spirv-builder = { version = "0.6.0", features = ["watch"] }
+spirv-std = { version = "0.6.0" }
 
 [patch.crates-io]
 rustc_codegen_spirv = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block" }
-
+spirv-builder = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block" }
+spirv-std = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block" }
 
 [dev-dependencies]
 glfw = "0.51.0"
 
 common = { path = "./common" }
 rectangle_cutting_shaders_shared = { path = "./examples/0_rectangle_cutting/shaders_shared" }
-
