--- a/examples/0_rectangle_cutting/shaders/Cargo.toml
+++ b/examples/0_rectangle_cutting/shaders/Cargo.toml
@@ -11,6 +11,6 @@ doctest = false
 [dependencies]
 rectangle_cutting_shaders_shared = { path = "./../shaders_shared" }
 
-daxa_shared = { path = "./../../../src/daxa_shared" }
+#daxa_shared = { path = "./../../../src/daxa_shared" }
 
-spirv-std = { version = "0.4.0", features = ["glam"] }
+spirv-std = { version = "0.6.0" }
