--- a/src/daxa_shared/Cargo.toml
+++ b/src/daxa_shared/Cargo.toml
@@ -8,4 +8,4 @@ test = false
 doctest = false
 
 [dependencies]
-spirv-std = { version = "0.4.0", features = ["glam"] }
+spirv-std = { version = "0.6.0" }
