--- a/tests/6_pipeline_manager/shaders/Cargo.toml
+++ b/tests/6_pipeline_manager/shaders/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 crate-type = ["dylib", "lib"]
 
 [dependencies]
-spirv-std = { version = "0.4.0", features = ["glam"] }
+spirv-std = { version = "0.6.0" }
 
